@@ -1,3 +1,4 @@
+* Handle device cookie
 * Add breadcrumb as title of window form
 * Display revision on dialog
 * Execute report asynchronously
